Fixed article block spacing added space below pagination

--- a/src/pages/game_pages/CoD/CodTourney.css
+++ b/src/pages/game_pages/CoD/CodTourney.css
@@ -225,7 +225,7 @@
 }
 
 .space-on-bottom-pagination {
-    padding-bottom: 5rem;
+    padding-bottom: 8rem;
 }
 
 @media (max-width: 768px) {
